SVD_MovieRecommender.ipynb
Updated 1

--- a/SVD_Movie_Recommender/SVD_MovieRecommender.ipynb
+++ b/SVD_Movie_Recommender/SVD_MovieRecommender.ipynb
@@ -88,7 +88,7 @@
     "k_value = 40  # You can adjust this value based on your analysis\n",
     "\n",
     "# Apply SVD to the User-Movie ratings matrix\n",
-    "U, sigma, Vt = svds(user_movie_ratings_sparse, k=k_value)  # We choose 20 latent factors\n",
+    "U, sigma, Vt = svds(user_movie_ratings_sparse, k=k_value)  # We choose k latent factors\n",
     "sigma = np.diag(sigma)  # Convert sigma into a diagonal matrix\n",
     "\n",
     "# Reconstruct the matrix for predictions\n",
